trunk/Archive2/31/5b526c50ba16a6/output
main.cpp:8:14: error: binary integer literals are a C++1y extension [-Werror,-Wc++1y-extensions]
          << 0b10   << '\n'
             ^
1 error generated.
